# mcat

./: .gitignore  Cargo.toml  README.md  support.md
crates/core/: Cargo.toml  README.md
crates/core/src/: catter.rs  config.rs
crates/core/src/markdown_viewer/: html_mermaid.rs  image_preprocessor.rs  mermaid.rs  mod.rs  plain_mermaid.rs  render.rs
docs/superpowers/specs/: 2026-03-24-mermaid-rendering-design.md  2026-03-25-mermaid-inline-image-design.md
