[workspace]
members = [
  "crates/core",
  "crates/markdownify",
  "crates/rasteroid",
]
resolver = "3"

[profile.dist]
inherits = "release"
codegen-units = 1
lto = "fat"

[workspace.dependencies]
markdownify = { version = "0.3.3", path = "crates/markdownify" }
rasteroid = { version = "0.3.1", path = "crates/rasteroid" }

anyhow = "1.0.102"
clap = { version = "4.5.58", features = ["derive", "env"] }
clap_complete = "4.5.66"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

tokio = { version = "1.49.0", default-features = false, features = ["macros"] }
tokio-tungstenite = "0.28.0"

hayro = "0.5.0"
encoding_rs = "0.8.35"
infer = "0.19.0"
strip-ansi-escapes = "0.2.1"
which = "8.0.0"
rayon = "1.11.0"
itertools = "0.14.0"
inquire = "0.9.3"
shell-words = "1.1.1"
ignore = "0.4.25"
textwrap = "0.16.2"
comrak = "0.50.0"
crossterm = "0.29.0"
pelite = { version = "0.10.0", default-features = false, features = ["std"] }
image = { version = "0.25.9", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
jxl-oxide = { version = "0.12.5", features = ["image"] }
tempfile = "3.25.0"
ffmpeg-sidecar = { version = "2.4.0", default-features = false }
syntect = "5.3.0"
two-face = "0.5.1"
resvg = "0.47.0"
fontdb = "0.23.0"
serde_json = "1.0.149"
base64 = "0.22.1"
futures = "0.3.31"
unicode-width = "0.2.2"
dirs = "6.0.0"
scraper = "0.25.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"] }
indicatif = "0.18.3"
regex = "1.12.3"
mermaid-rs-renderer = "0.2.1"
boxcar = "0.2.14"

thiserror = "2.0.18"
zip = { version = "8.1.0", features = [ "deflate-flate2" ], default-features = false }
tar = "0.4.44"
flate2 = "1.1.9"
lzma-rust2 = { version = "0.16.2", default-features = false, features = ["std", "xz"] }
calamine = "0.33.0"
csv = "1.4.0"
quick-xml = "0.39.0"

shared_memory_fork = "0.12.5"
color_quant = "1.1.0"
rand = "0.10.0"
fast_image_resize = { version = "6.0.0", features = ["image"] }
signal-hook = "0.4.3"
libc = "0.2.183"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.55.0"
