[package]
name = "mcat"
version = "0.5.5"
authors = ["Meron Bossin"]
description = "Terminal image, video, and Markdown viewer"
keywords = ["sixel", "iterm", "markdown", "kitty", "file-converter"]
categories = [
  "command-line-utilities",
  "text-processing",
  "rendering",
  "multimedia",
]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "../../README.md"
edition = "2024"

[dependencies]
markdownify.workspace = true
rasteroid.workspace = true
strip-ansi-escapes.workspace = true
clap_complete.workspace = true
which.workspace = true
rayon.workspace = true
itertools.workspace = true
inquire.workspace = true
shell-words.workspace = true
ignore.workspace = true
textwrap.workspace = true
clap.workspace = true
comrak.workspace = true
crossterm.workspace = true
pelite.workspace = true
image.workspace = true
tempfile.workspace = true
ffmpeg-sidecar.workspace = true
syntect.workspace = true
two-face.workspace = true
resvg.workspace = true
fontdb.workspace = true
serde_json.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
unicode-width.workspace = true
dirs.workspace = true
zip.workspace = true
scraper.workspace = true
reqwest.workspace = true
indicatif.workspace = true
regex.workspace = true
mermaid-rs-renderer.workspace = true
infer.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
flate2.workspace = true
lzma-rust2.workspace = true
encoding_rs.workspace = true
hayro.workspace = true
boxcar.workspace = true
signal-hook.workspace = true
tar.workspace = true
jxl-oxide.workspace = true
console-mermaid = { git = "https://github.com/AlextheYounga/console-mermaid.git", rev = "c19baf430ced68dbc9185d1181a27d4732628083" }

[target.'cfg(windows)'.dependencies]
winreg.workspace = true
